# chatbot-ia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/chat/: chain.py  memory.py  prompts.py  router.py  schemas.py  service.py
app/core/: config.py  exceptions.py  logging.py
tests/: conftest.py
tests/integration/: test_chat_endpoint.py  test_health.py
tests/unit/: test_chain.py  test_memory.py  test_service.py
