[project]
name = "chatbot-ia"
version = "0.1.0"
description = "API REST assíncrona de chatbot tutor de Python com FastAPI, Langchain e OpenAI."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "coverage>=7.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", ".claude", ".agents"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
# defaults são adequados

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
